--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="colorLightBlue">#3f51b5</color>
+    <color name="colorDarkBlue">#303f9f</color>
+    <color name="colorLightRed">#ff5252</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
