--- a/app/src/main/res/anim/back_to_top_animation.xml
+++ b/app/src/main/res/anim/back_to_top_animation.xml
@@ -2,9 +2,10 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <translate
-        android:duration ="1500"
-        android:fromYDelta="100%"
-        android:fromXDelta="0%"
+        android:duration ="2000"
+        android:toYDelta="-500%"
+        android:toXDelta="0%"
+
         />
 
     <alpha
