--- a/app/src/main/res/anim/to_right_animation.xml
+++ b/app/src/main/res/anim/to_right_animation.xml
@@ -3,13 +3,14 @@
 
     <translate
         android:duration ="2000"
-        android:fromYDelta="0%"
-        android:fromXDelta="-200%"
+        android:toYDelta="0%"
+        android:toXDelta="500%"
         />
 
     <alpha
         android:fromAlpha="0.1"
         android:toAlpha="1.0"
         android:duration ="1500"/>
+
 
 </set>
